--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/0f83e5d3b7.js"
       crossorigin="anonymous"
